--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@ $(document).ready(function() {
 						</a></li> 
 					</ul>
 					<div class="clearfix"> </div>
-					<h3 class="w3ls-title">Featured Products</h3>
+					<h3 class="w3ls-title">Featured items</h3>
 					<div id="myTabContent" class="tab-content">
 						<div role="tabpanel" class="tab-pane fade in active" id="home" aria-labelledby="home-tab">
 							<div class="tabcontent-grids">  
