--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ $(document).ready(function() {
 							<ul class="cd-dropdown-content"> 
 								<li><a href="offers.html">Today's Offers</a></li>
 								<li class="has-children">
-									<a href="#">Entertainment</a> 
+									<a href="#">Television</a> 
 									<ul class="cd-secondary-dropdown is-hidden">
 										<li class="go-back"><a href="#">Menu</a></li>
 										<li class="see-all"><a href="products.html">Electronics</a></li>
@@ -240,7 +240,7 @@ $(document).ready(function() {
 											</ul>
 										</li> 
 										<li class="has-children">
-											<a href="#">JBL Sound Bars</a> 
+											<a href="#">Accessories</a> 
 											<ul class="is-hidden">  
 												<li class="go-back"><a href="#">Audio</a></li>
 												<li><a href="products1.html"></a></li>  
