change in categories

--- a/index.html
+++ b/index.html
@@ -212,47 +212,113 @@ $(document).ready(function() {
 									<a href="#">Television</a> 
 									<ul class="cd-secondary-dropdown is-hidden">
 										<li class="go-back"><a href="#">Menu</a></li>
-										<li class="see-all"><a href="products.html">Electronics</a></li>
+										<li class="see-all"><a href="products.html">All Electronics</a></li>
 										<li class="has-children">
 											<a href="#">Television</a> 
 											<ul class="is-hidden"> 
-												<li class="go-back"><a href="#">Electronics </a></li>
-												<li><a href="products.html">Smart TV</a></li> 
+												<li class="go-back"><a href="#">All Electronics </a></li>
+												<li><a href="products.html">Full HDTV</a></li> 
+												<li><a href="products.html">Smart Tv</a></li>
+												<li><a href="products.html">4K Ultra HDTV</a></li>
+												<li><a href="products.html">OLED TV</a></li>
 											</ul>
-										</li>
+										</li> 
 									</ul> <!-- .cd-secondary-dropdown --> 
 								</li> <!-- .has-children -->
 								<li class="has-children">
 									<a href="#">Audio</a> 
 									<ul class="cd-secondary-dropdown is-hidden">
 										<li class="go-back"><a href="#">Menu</a></li>
-										<li class="see-all"><a href="products1.html">Audio</a></li>
+										<li class="see-all"><a href="products1.html">All Electronics</a></li>
 										<li class="has-children">
-											<a href="#">JBL Sound Speakers</a> 
-											<ul class="is-hidden">  
-												<li class="go-back"><a href="#">Audio</Audio></a></li>
-												<li><a href="products1.html">flips </a></li>
-												<li><a href="products1.html">Charge</a></li>
-												<li><a href="products1.html">Xtreme </a></li>
-												<li><a href="products1.html">Studio </a></li>
-												<li><a href="products1.html">Partybox</a></li>
-												<li><a href="products1.html">Boombox</a></li>
+											<a href="#">All Sounds </a> 
+											<ul class="is-hidden"> 
+												<li class="go-back"><a href="#">All Electronics</a></li>
+												<li><a href="products1.html">Sound bars </a></li>
+												<li class="has-children">
+													<a href="#">Portable Speakers </a>  
+													<ul class="is-hidden">
+														<li class="go-back"><a href="#"> </a></li>
+														<li><a href="products1.html">JBL</a></li>  
+														<li><a href="products1.html">Harman Kardon</a></li>
+														<li><a href="products1.html">Sony</a></li>
+													</ul> 
+												</li> 
+												<li class="has-children">
+													<a href="#">Headsets </a>  
+													<ul class="is-hidden">
+														<li class="go-back"><a href="#"> </a></li>
+														<li><a href="products1.html">Earphones</a></li>  
+														<li><a href="products1.html">Headphones</a></li>
+													</ul> 
+												</li> 
+												<li class="has-children">
+													<a href="#">Home Theatre </a>  
+													<ul class="is-hidden">
+														<li class="go-back"><a href="#"> </a></li>
+														<li><a href="products1.html">Bluetooth</a></li>  
+														<li><a href="products1.html">Smart/Blue-ray</a></li>
+													</ul> 
+												</li> 
+												<li><a href="products1.html"></a></li>
+												<li><a href="products1.html"></a></li>
 											</ul>
-										</li> 
+										</li>
+									</ul> <!-- .cd-secondary-dropdown --> 
+								</li> <!-- .has-children -->
+								<li class="has-children">
+									<a href="products2.html">Car Audio</a> 
+									<ul class="cd-secondary-dropdown is-hidden"> 
+										<li class="go-back"><a href="#">Menu</a></li>
+										<li class="see-all"><a href="products2.html">All Electronics</a></li>
+										<li class="has-children">
+											<a href="products2.html">Car Audio</a> 
+											<ul class="is-hidden"> 
+												<li class="go-back"><a href="#">All Electronics</a></li>
+												<li><a href="products2.html">Bluetooth </a></li> 
+												<li><a href="products2.html">Smart </a></li>
+												<li><a href="products2.html">Car Speakers </a></li>
+											</ul>
+										</li>
+									</ul><!-- .cd-secondary-dropdown --> 
+								</li> <!-- .has-children --> 
+								<li class="has-children">
+									<a href="#">Accessories</a> 
+									<ul class="cd-secondary-dropdown is-hidden">
+										<li class="go-back"><a href="#">Menu</a></li>
+										<li class="see-all"><a href="products3.html">All Electronics</a></li>
 										<li class="has-children">
 											<a href="#">Accessories</a> 
 											<ul class="is-hidden">  
-												<li class="go-back"><a href="#">Audio</a></li>
-												<li><a href="products1.html"></a></li>  
-												<li><a href="products1.html"></a></li> 
-												<li><a href="products1.html"></a></li> 
-												<li><a href="products1.html"></a></li> 
-												<li><a href="products1.html"></a></li> 
+												<li class="go-back"><a href="#"></a></li>
+												<li><a href="products3.html">Antenas </a></li> 
+												<li><a href="products3.html">TV wall mounts </a></li>
+												<li><a href="products3.html"> </a></li>
+												<li><a href="products3.html"> </a></li>
+												<li><a href="products3.html"></a></li>
+												<li><a href="products3.html"></a></li>
 											</ul>
 										</li> 
-									</ul> <!-- .cd-secondary-dropdown --> 
-								</li> <!-- .has-children -->
-  
+									</ul><!-- .cd-secondary-dropdown --> 
+								</li> <!-- .has-children -->  
+								<li class="has-children">
+									<a href="#">DVD Players</a>
+									<ul class="cd-secondary-dropdown is-hidden">
+										<li class="go-back"><a href="#">Menu</a></li>
+										<li class="see-all"><a href="products4.html">All Electronics</a></li>
+										<li class="has-children">
+											<a href="#">DVD Players </a> 
+											<ul class="is-hidden">
+												<li class="go-back"><a href="#"></a></li>
+												<li><a href="products4.html"> </a></li> 
+												<li><a href="products4.html">  </a></li>
+												<li><a href="products4.html"> </a></li>
+												<li><a href="products4.html"></a></li>
+												<li><a href="products4.html"> </a></li>
+											</ul>
+										</li> 
+									</ul><!-- .cd-secondary-dropdown --> 
+								</li> <!-- .has-children --> 
 								<li><a href="sitemap.html">Full Site Directory </a></li>  
 							</ul> <!-- .cd-dropdown-content -->
 						</nav> <!-- .cd-dropdown -->
