a bout the store

--- a/about.html
+++ b/about.html
@@ -300,8 +300,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 		<div class="container"> 
 			<h3 class="w3ls-title w3ls-title1">About Extreme Gadgets</h3>
 			<div class="about-text">	
-				<p>Etiam faucibus viverra libero vel efficitur. Ut semper nisl ut laoreet ultrices. Maecenas dictum arcu purus, sit amet volutpat purus viverra sit amet. Quisque lacinia quam sed tortor interdum, malesuada congue nunc ornare. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In semper lorem eget tortor pulvinar ultricies. Nulla sodales efficitur consequat. Maecenas mi diam, imperdiet consectetur ultricies nec, convallis sit amet turpis.
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor vehicula ipsum nec ultrices. Pellentesque sed feugiat sapien.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor vehicula ipsum nec ultrices. Pellentesque sed feugiat sapien.  ullamcorper nunc. Aenean eget massa orci. Vivamus vulputate elit at rutrum elementum. Duis sit amet posuere justo, sit amet finibus urna. Aenean elementum diam nec laoreet sodales. Morbi vulputate tempor nisl nec tristique.</p> 
+				<p>Our e-commerce platform is here to revolutionize your shopping journey. Whether you're on the hunt for cutting-edge tech gadgets, the latest fashion trends, or essential household appliances, we've got it all. We're not just an ordinary online store; we're your digital shopping haven. Bid farewell to crowded malls and say hello to the convenience and ease of buying online in Kampala, Nansana, Entebbe, Kira and all across Uganda.</p> 
 				<div class="col-md-3 ftr-top-left about-text-grids">
 					<i class="fa fa-shopping-basket" aria-hidden="true"></i>
 					<h4>10 Million+ <br>Products</h4>
