--- a/about.html
+++ b/about.html
@@ -300,7 +300,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 		<div class="container"> 
 			<h3 class="w3ls-title w3ls-title1">About Extreme Gadgets</h3>
 			<div class="about-text">	
-				<p>Our e-commerce platform is here to revolutionize your shopping journey. Whether you're on the hunt for cutting-edge tech gadgets, the latest fashion trends, or essential household appliances, we've got it all. We're not just an ordinary online store; we're your digital shopping haven. Bid farewell to crowded malls and say hello to the convenience and ease of buying online in Kampala, Nansana, Entebbe, Kira and all across Uganda.</p> 
+				<p>Our e-commerce platform is here to revolutionize your shopping journey. Whether you're on the hunt for cutting-edge tech gadgets, or essential household appliances, we've got it all. We're not just an ordinary online store; we're your digital shopping haven. Bid farewell to crowded malls and say hello to the convenience and ease of buying online in Kampala, Nansana, Entebbe, Kira and all across Uganda.</p> 
 				<div class="col-md-3 ftr-top-left about-text-grids">
 					<i class="fa fa-shopping-basket" aria-hidden="true"></i>
 					<h4>10 Million+ <br>Products</h4>
