--- a/about.html
+++ b/about.html
@@ -407,7 +407,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 address-left agileinfo">
 					<div class="footer-logo header-logo">
 						<h2><a href="index.html"><span>E</span>xtreme <i>Gadgets</i></a></h2>
-						<h6>Your stores. Your place.</h6>
+						<h6>Your store. Your place.</h6>
 					</div>
 					<ul>
 						<li><i class="fa fa-map-marker"></i> Kooki Tower Level 5,Shop No_521 Kampala UG.</li>
