--- a/about.html
+++ b/about.html
@@ -341,7 +341,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div> 
 					<div class="ftr-top-right">
 						<h4>DOOR DELIVERY</h4>
-						<p>We assure you that all precautions are taken so that your package is delivered to you intact and on time. Our delivery service is facilitated by licensed third-party courier service providers/delivery agents</p>
+						<p>We accept payment by Cash or Mobile Money on delivery within Kampala and some parts of Wakiso district.</p>
 					</div> 
 					<div class="clearfix"> </div>
 				</div> 
