(map info stored as comment in the code)

--- a/contact.html
+++ b/contact.html
@@ -298,7 +298,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 	<div class="contact">
 		<div class="container"> 
 			<h3 class="w3ls-title w3ls-title1">Contact Us</h3>  
-			<div class="map-info">
+			<!--div class="map-info">
 				<div class="col-md-6 map-grids">
 					<h4>Our Extreme Gadgets store1</h4>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9503398796587!2d-73.9940307!3d40.719109700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a27e2f24131%3A0x64ffc98d24069f02!2sCANADA!5e0!3m2!1sen!2sin!4v1441710758555"></iframe>
