(faq question made comments)

--- a/faq.html
+++ b/faq.html
@@ -298,7 +298,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 	<div class="faq-w3agile">
 		<div class="container"> 
 			<h3 class="w3ls-title w3ls-title1">Frequently asked questions(FAQ)</h3> 
-			<ul class="faq">
+			<!--ul class="faq">
 				<li class="item1"><a href="#" title="click here">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor vehicula ipsum nec ?</a>
 					<ul>
 						<li class="subitem1"><p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p></li>										
@@ -349,7 +349,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 						<li class="subitem1"><p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod  consectetuer adipiscing elit, sed diam nonummy nibh euismod accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p></li>										
 					</ul>
 				</li> 
-			</ul> 
+			</ul--> 
 			<!-- script for tabs -->
 			<script type="text/javascript">
 				$(function() {
@@ -387,7 +387,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div> 
 					<div class="ftr-top-right">
 						<h4>DOOR DELIVERY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>We accept payment by Cash or Mobile Money on delivery within Kampala and some parts of Wakiso district.</p>
 					</div> 
 					<div class="clearfix"> </div>
 				</div> 
@@ -397,7 +397,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div> 
 					<div class="ftr-top-right">
 						<h4>CUSTOMER CARE</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>Let us know how we can help you "as communication is the key to our succes</p>
 					</div> 
 					<div class="clearfix"> </div>
 				</div>
@@ -407,7 +407,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div> 
 					<div class="ftr-top-right">
 						<h4>GOOD QUALITY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>Buy now and thank us later </p>
 					</div>
 					<div class="clearfix"> </div>
 				</div> 
