--- a/card.html
+++ b/card.html
@@ -989,7 +989,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div> 
 					<div class="ftr-top-right">
 						<h4>DOOR DELIVERY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>We accept payment by Cash or Mobile Money on delivery within Kampala and some parts of Wakiso district. </p>
 					</div> 
 					<div class="clearfix"> </div>
 				</div> 
