(customer care and quality)

--- a/card.html
+++ b/card.html
@@ -999,7 +999,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div> 
 					<div class="ftr-top-right">
 						<h4>CUSTOMER CARE</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>Let us know how we can help you "as communication is the key to our succes</p>
 					</div> 
 					<div class="clearfix"> </div>
 				</div>
@@ -1009,7 +1009,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div> 
 					<div class="ftr-top-right">
 						<h4>GOOD QUALITY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>Buy now and thank us later</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div> 
