(top ten faq questions made comment)

--- a/help.html
+++ b/help.html
@@ -307,7 +307,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</button>
 				</form>
 			</div> 
-			<div class="faq-w3agile"> 
+			<!--div class="faq-w3agile"> 
 				<h5>Top 10 Frequently asked questions(FAQ)</h5>
 				<ul class="faq">
 					<li class="item1"><a href="#" title="click here">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor vehicula ipsum nec ?</a>
@@ -361,7 +361,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 						</ul>
 					</li> 
 				</ul>
-				<!-- script for tabs -->
+				<-- script for tabs -->
 				<script type="text/javascript">
 					$(function() {
 					
@@ -385,7 +385,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					});
 				</script>
 				<!-- script for tabs --> 
-			</div> 
+			</div--> 
 		</div>
 	</div>
 	<!-- //login-page --> 
