--- a/index.html
+++ b/index.html
@@ -1323,7 +1323,7 @@ $(document).ready(function() {
 					</div> 
 					<div class="ftr-top-right">
 						<h4>DOOR DELIVERY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>We accept payment by Cash or Mobile Money on delivery within Kampala and some parts of Wakiso district.</p>
 					</div> 
 					<div class="clearfix"> </div>
 				</div> 
@@ -1333,7 +1333,7 @@ $(document).ready(function() {
 					</div> 
 					<div class="ftr-top-right">
 						<h4>CUSTOMER CARE</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>Let us know how we can help you "as communication is the key to our succes</p>
 					</div> 
 					<div class="clearfix"> </div>
 				</div>
@@ -1343,7 +1343,7 @@ $(document).ready(function() {
 					</div> 
 					<div class="ftr-top-right">
 						<h4>GOOD QUALITY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo ac </p>
+						<p>Buy now and thank us later </p>
 					</div>
 					<div class="clearfix"> </div>
 				</div> 
